# invenio-op

./: .gitignore  .travis.yml  Gruntfile.js  MANIFEST.in  Makefile.am  THANKS  bower.json  configure.ac  requirements.txt  setup.py
config/: invenio-autotools.conf.in  invenio.conf
docs/: api.rst  conf.py  contents.rst.inc  demo.rst  index.rst  modules.rst  pluggable-objects.rst
docs/developers/: extensions.rst  introduction.rst  models.rst  modules.rst
invenio/base/: config.py  factory.py  i18n.py  manage.py  signals.py  utils.py  wrappers.py
invenio/base/scripts/: apache.py  cache.py  config.py  database.py  demosite.py
invenio/base/templates/: page.html  page_base.html
invenio/core/record/: definitions.py
invenio/ext/: confighacks.py
invenio/ext/admin/: __init__.py
invenio/ext/babel/: __init__.py
invenio/legacy/: inveniocfg.py  webuser.py
invenio/testsuite/: __init__.py  test_intbitset.py  test_legacy_elmsubmit.py  test_utils_shell.py
invenio/utils/: datastructures.py  date.py  html.py  serializers.py  url.py
modules/: Makefile.am
modules/bibcirculation/: Makefile.am
modules/bibedit/: Makefile.am
modules/bibrank/: Makefile.am
modules/docextract/: Makefile.am
modules/elmsubmit/: Makefile.am
modules/miscutil/: Makefile.am
modules/oaiharvest/: Makefile.am
modules/oairepository/: Makefile.am
modules/webaccess/: Makefile.am
modules/webdeposit/etc/templates/: Makefile.am  webdeposit_completed.html  webdeposit_deposition_type.html  webdeposit_edit.html  webdeposit_edit_action_bar.html  webdeposit_myview.html  webdeposit_run_base.html
modules/webstyle/: Makefile.am
modules/websubmit/: Makefile.am
(+624 files in other folders)
