## This file is part of Invenio.
## Copyright (C) 2012 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

templatesdir = $(sysconfdir)/templates
templates_DATA = \
            webdeposit_completed.html \
            webdeposit_deposition_type.html \
            webdeposit_edit.html \
            webdeposit_edit_action_bar.html \
            webdeposit_error.html \
            webdeposit_index.html \
            webdeposit_myview.html \
            webdeposit_run.html \
            webdeposit_run_action_bar.html \
            webdeposit_run_base.html \
            webdeposit_run_field.html \
            webdeposit_run_field_label.html \
            webdeposit_run_field_subform.html \
            webdeposit_run_group_end.html \
            webdeposit_run_group_start.html \
            webdeposit_widget_plupload.html

EXTRA_DIST = $(templates_DATA)

CLEANFILES = *~ *.tmp
